[gd_scene load_steps=13 format=4 uid="uid://c6t7m12pqvn2j"]

[ext_resource type="Script" uid="uid://cnt0foxrpusvk" path="res://Scene/start_up.gd" id="1_xucof"]
[ext_resource type="FontFile" uid="uid://dio0vawax0t0d" path="res://Google Dino Run 911 Vers/bytebounce/ByteBounce.ttf" id="2_yn35v"]
[ext_resource type="Texture2D" uid="uid://bm8yecjkwddo5" path="res://Google Dino Run 911 Vers/Start button.png" id="3_yn35v"]
[ext_resource type="PackedScene" uid="uid://bprvdorybv34l" path="res://Scene/Setting.tscn" id="4_ckj17"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ckj17"]
bg_color = Color(0.196781, 0.683735, 0.639298, 1)

[sub_resource type="PortableCompressedTexture2D" id="PortableCompressedTexture2D_ckj17"]
_data = PackedByteArray("AAADAAUAAAABAAAAAAUAANACAABoHgAAUklGRmAeAABXRUJQVlA4TFQeAAAv/8SzAOfAJgDAJHOXGw1ALSISgRxcfrlLEDYBAKTBtQC8zAJonSVdHHe3h2lsW40YNBpJF5k2UdRBBVAAFoVGpc155z8AANef+cugNsk4VUNXXNXv14tpbpbqcMLmfS/Xs7vOw7w1yzowpuEc85OVhkjpoGIkvKXyKAtZoB4jKJws9qo3Yilo20Zyyp/1PRgiYgJqZ/Fzz3vMkH9ZkiTXbfTFwL5X9z/urtDdMCYkABxNR/SfomzbddtmMaMONaR6wAvA0PMDvL22nbe1bWshRSxoYc3XiAC5Xv7/DyV7b62RHm9kiOWI/ktw20iSJIVdFV1Xx8zsBup+AG1Jkq3WThA+b74ikAIE//+fZs1098xaLCRZ4R3Rf4m2bVtps+5DpCbd53DPFo34AfH4i7f/vP3nx39+/OftP/bf239+/OfHf97+Y/+9/efHf3785+0/9t//E+Tp8dsff0wdbTelTa9Yu6BjtnX47V9H62l/MZkugd9+2zlY97Yr44Xr0xXQ/8/8tnEw/tFretXahQyjfYPxH8e9jvfpdWsXMfx/mt92Dl1/mZs+9+ldaLcKrZVb+59mwzO9CdyaaW2wfz50l+kNnJq7s4MW6W6lv4ZcyUO20Ibec67jF+2h+6473adPQds4/NgbVxnfH/zgj15v07cIbtFvPQaT2xcd+AT0a/rObfoawa32rccPvXt9hdCyw4/nV4PKX5/yrcWt1eYj+qqbYnH8h84LYuT/fU6/wsmXH8fuH//5P1BSj4OPPuXqcbgx7H2hT/KI2IeWT8OoR5XSwh+Z227rf/YjjfGgEopFx2z3c00aJ7FYdT7Zu42hFK++rD/YJM6ATVUrLjfvc32newK4uPXm2dj0LqugG+oUw3ZRAdRsIaSyL3LG0tqM5ZwYCbbi4AstyCuvZc/W0saxzVhOi2BxlEh8mTKKrWoc63ovbV25STYSS/9wpSDz2AMIZf7Sj1VsFRfDeDjkUtrhkqO4zlKfBrRY+oAq1mg3BuOo1PpVdpPi/oy72MxiqBXHsuylLQswyTFnjYkStVi6MpFGK7TZTYHZI5T5JXaf7rU7YxGbXQxjnTj2fS5t371JjmvSGhMlarF0BHxsre1lbglG4z5CmV9gR+nuSPeWJjaToWNnlTjmeShtno1JGm/PWmOiRC2WbvxYShFdaN4ljKtxH6HML6+vMN1H7+FwGTpWQ40xDFtpw2BNsgSXtsY0iWIs5yd6U13XBMW1RtqvMO4z83Z1fb3DdJfelzGLzT68rIYKY/PNmmQRk7XGRk2iGMt4/s9dR2eQxE2B/h994M32CxsLTLfpXRmD2Ow/mdVQYTCTLGKkNabp1iS6WHg/FbPapT3GnqC42Ej7FcZ9nrZtYHb9usaO0r3Z3pPxhA2th+J6Yr8FmorTkuGc46pKPD2gY76QtPCO0n6FsAe/nLqsYbZ8rvvGRtbDMM+233Ka7pvV0WU3aK5yBpvm60jr7sj/X/HTnEuc+JNNv9DWwzC43i43exp7enxX1Ez0EiJM4oKHYv772MnEdQ1oZt1CXg++Nzu5cXZQk5zAfOEr03HJg1kpcj5d2HigXHdpCvzjE3Swu7k7ZZwdfJAsmI5eweoHd+AMp6eAS6WTh81zD3fDmd1kxNHt3ews4Tjj4t4OyGc4ANnj6nnfGBaIz5pci77CxJdMU41p292a1IfirnwhAlMiGadNcRgQQfaP1V6Hem9lSKcRtwuqN1jawVoUr9Sn3hcrspUJzLNTXR67ZLpojHm0ur0p+IgF1xYFyepExbmQ3Jj924ZRvhCBKqmIP+r1yFuHrL7XkNLkUT/buBlQz25EsMfhIhW8j1Qa1x0WqNvpKG7RS6aPfGCFgVu2/aTg7GLNNBWRPUgbEgMFZ0yBbdaFL0QYNSXYJG2GAwgLRJaIYpEXKF00ZCu2XqUPrwIckCec+BrWHtmstDWIxyFFkvfRSmP6qEBWk7FQRsmm6CXTRz5g0OEh76bZBZKlVGiRFXVQG5BMBMd3B36aoHwhgqLEr6/B6rUJDiAddRUllpEsB+G5MHFxfSuYkiJNYAveBcTOcARG4nFGku59vNKIPipwjdhpXOFIrh12V6WZoKNDyTREyK5VLKdCCGwt6qC2dXWSmeAYQmbIeoAoX4igKLHLC1xfOM/FNQNoR11DiQUd7LEsB+W5MHFxDa820xcoSXoLwz4gcHYDADqJx1lNsvcJlYb1UYH3iJ3qClkmXP17DzBBjzJyriEsu0BOIBU8rntRh7Qd0pxkJniNIv2+TZiUL0TQvyJhpvoCaEddg8diVQM/XRbpuTB5cUEPkkTEnkwft9sGSNsHTwhwBOJxTpTqfUqlQX1U4BKxU10hzoRRBzzB5MNkK/k+gmbX6wmlgoa1FHVQ27I4yUTw0cPI6wGjfCGC/BUJTExJho521GcFKRZ/sEf71KM9FyYvLn+crPxtuMewzRZegdkNKGc4sGr5cMXGKlX1Pl9pokdSgXvETmWFNBMbPyWbTU9g8/MwgJGcXcFAjTykzga0O8lEcOkx+KV2h+yn8T7MrhiibJHCgdHRjvqgIMUCdS8uzzj7ZilkLy6bDYIOplVQ+DHURgAW+QBfSwnDFhNB9j5QaYJHKgJn2U4DCoVMCEHbnvmZw9kPObvhVMCoNEMykrXMhMDbNjNDseATgI96HXzeBvW5MHNxjYVgoY16Q+0NNjeXmkLv2rOhVup9AUWmVhr1yJhLEokhhSQTYnOhhEC5Nql2Iye7EQNVMzYMmmTbI/C/irt0nACQuwpA3fMQWF2Zi2tKMnQlxZjFtoD//TU2BJz3xfwUyw67ZILE/FDik8v0stiRkt2QgQYyMUT0BvG5ARNRvS9N4nNXD+enoaWQuLgg2q2puJWqSlsE5QwH3VfqhONKP2x+sMxy7LSxUGRwrhF1sxsYYb0xNpQbeyp4AlzuKoF0R5dC4uIaxZ6YHLqUktTYEpBN9EihTjiuehPMDzhSjp02F4oIPdN259i1s+vJ71m7hyNDB08k+dDcIjZ19QkvhcTFNY60K4mRtR9Ww9vBOpFQyocqJ8WYZKfthaIhnGkb02gkuw3BcuMDahsfSVVM7htaXH+/HFwX1H6AvcQ7eBzt+DkJqcqjoGLMYU2U2AAoz+Acu2J2N6i6RtcntB789GSjRUzq6uFzn/cE9SrBG3KSR5RQFVfcCGxupos/gVJ7yY6UVZKthTJqoFxDkSaWvrDRiY21WyQ8DzeA6Zz/BCTMPyiwJLKZzfDcMSty+XVSJbYBlnjNikxxCHP2mAfL9fYwVM9ucxPIDZhQhudWJ5O5irjU5z1B1ez+SFoj0QF/QhkQNwKbtx/aHhkMWw6gzHJKsl4s9t3DQatdCZ7rIMOWmd46XQXmRtg9DKX3GS8uD9m6kgarymcbYUC3z82SKFFxDfcFKUngbZTjEnRPcLlBU4u/SMtcZUrqT8VNRTqqM9ML/ov2aheYDVtQE1AvOAumJeLz/Nw6Bl4PZVJ6L+F5aAsW3yK23AUebOAsLJlDi/Ten8Cs6pNLMkmiVPXDEPhnBje1p0cNOjFrAoMURip2PaDpKWjem0NOcTIZmdbDU6WR/F7m/c3j6130yVsQyZGGwZ76sTbvuj6FgMQhDogiC5LrACY/gVRIxJNzKEmE5Ma40gnQUzwnomU6cXHNJJmDbEm4sUrE6aQ1BhX4M5NB+yuHe++PNGtn6nuElJDE5sDbBCHoSNaSUKRV3C315gikeK+IKFlfr2EKuNs+XUMISi8gLfQgYlurxDCrhVLaDtuBrk+JJSix0am0IMsSylrjbE80m+kMBBZSa8jhyfAMydQheGwUX0FaVz7RgJyFwZfMbtzF210tlLtRCVoRL+vTkCW2iPA+q46e3dbhnwYA0DhaI7CQ+gG6xmz9RMV89IKx1Lrj4sLsB75kdmNZMnEFBJqxn35NOOquTTav7E8Tj/NgVkg37pA+amGK2nu3JthUNqa4qPDJoC5QOzAusMeBmllZMVhoSSXZ+m7jYI/HI8RJdyuvBvinih5Noqe46KlI5kNUBAMZ4oibYJIGPbhvubwY+3mC8qE3y25LQiHy90MdFlsSLpSUWAal+Zdu2kTexUvGpaJ5/GNNDAjUW4eG2yJEjflHotLeMOjmclIHJdotM+iYfMDgR1l4nqTEuW/ts3nBJxH4/FgMGNucwgBCSahnqbl37hV8ns1+kGKNWHbPs9tgg01gro64QqRF1wTCzyjCx0QT7hhs3dZlQ56ghZ6sm4k2Ds21rzsZctBDEWJxZ4PkfQM7JNh/5Cy6UDe7rWEfSw9AnK2YZE30FLeFVVeD9DKGB/AnWf5BS/ByPgmbOUOyKfHNfm4tMj3df2gtuivwTwPoaDm5VNI4Cc5OW2OgtUccY0mnQX89rOfENjciuz3ForuDf6x8AB6KU+qHKJm00Qluu1c5JFasSlp3cH8ePOsT88jWkQq2tDJCE+SwaENqdgWJzU0bmB0P5bYxrJZTUMKrARd85ESHlzq6yMrjmozubFb0SZDsMKGPR5tk7GMxq05mdhucNvfUcCbkFCu5OhnXhSCfh5UEhtK49DxbIeiRJ8TsCU3dA2yLPDZLyUncIzuEWYd5dGsyJQxfVHEelikurjjwJkjgvI5bUtSgKxEx/Wpd0esIC8qworYm8NSgT340R94zaXVMeHnYLttxictusvg0BmLxOUq8CpPrCTh9dYiYfk5XcaaWx5SV3XvD09PDh39XNOqRyaQ9k1bHrsPZNJG40xYCWWeIgKnxHjfoKkSCTuptTJpWyUpanMABiBNNSDI+xdFQGsCGN4vHPmTM5T4A7Rji3aNaWobqQTDoGgSCTuttoHRNdqPTwRNBB3pToBmPRIGEj2YDuHU4iyc1Ww2FOIUqbgWeR+wP1+AkGhpTPYg1qhh0DUQnZzE3PyG1Q+TJZWpzegYPAH77oZpHZugUD3sT+DUzBRyIR4Es6vrt3kC1zqy6oaqNbNUZaHRVGbyTZ8ScsTubKZJd99q8ycltStMwu4OKjqc+ggSEgkjEw94EaM3AH0uFhcsezu3Ww+aKmwJUAkMCgysG7hNU9mBrVDXoIRkWigk6Jea2fszqDWTXvDRvD/7UsNFw3SXV+Hiqp4hTJljp4lLMcuyCbQO8ZtBbOES0kLlvL3x/jt8FjeO0ApccVAKz9L1VB7j2bC0Iqqns2dbooTAW3byzQMW6ZaGUoHNidhUrdyXe+xoQ5PWi7AqpCMQjJFaOTOxEoJhYrhNvzVYZMEkaxb4IWcZK7z7F0mHPjkWNjqwZ9xa26TwKdw9gIBtz3LTgwBLYpe+tOuoG154pBUU1lb3bGl3HWHSlJmmQCjSUI+ikmG3B6l2I974GBCG9cnaNNFm2EIcamdqJQBbubhJLjmfRhT1wN8qgSfJ4hSxjpatLsXTY02NRouPi/2ciT3afQccDzOunrj0v9GpK+1p23pZyBoJrD5QCU01lL7ZGVYNeUFALDVKChbKOWTGbgg10Id41IAjrVbO7huIR4hAjU3usLSyx42ojBC7pFggIQzM/ITisFKxD4bDnx6JFh6WHYMsO4b8T8b0WLz1Ejzl2WmeU9nVfeLuXMxBYe7KhjVT2HVlkJLpSkyxIERLKmBWzCTrWaXJjgvCGFGEwHiEOLbKkviAdNqKRH8+FSLvfobJRNL9RyMEorUN62CvEIkXnhbt/ZqFFz1REm7bKtuwVB8kgBO71Rmlf6502+2dIWHvQ0AKynfGNcXmlJlmQKiiUxJgPhcFG440Johs0wmg8Qhw8MnlM3r+w7xEL5IktywNK4wtENT9+2EfxYJLDXiMWKTrC+C37YzysVTY1c+Ep1K1NLz68dseVt7FUklp7AdnW+DLkmZrETQeEkhtzuOMWEBTWHI9HiEOITB+Tcyvse8QCNaFQGjdJ1fzoYR+ldUiPZo1YpOjqk9DgibRRZoBXglNKoXZyVSw5vNR4M5WkOlpAdqI8HmgAG0pezBfQJP9aoQfKuR2JtGgYo7DO1GCYqCqxSNFRhq3hwuACNVdEEsxzoAwVV5nPT6hEn0Tcwq2G04SYLrmxJ0CoI0VqPIw6qWkmlvbJ+CIKykpbAvu+ITkD3XFDwOy2QmuEt6hVY9TDmCsoFD8N7kHa5QElmnkQoDueNwx6Bibh+POS2EQ3A7bvvUGtOx8PBj2sJzthMtjKJOLK03ghfk4YsdZuKUC4w6IBMg23bMPciHj2MNVIoIbouybDTHZkBTvZ1oS04HSpEuWr9N9aJvq6kB5fANqpNLgi+pojLm61nUj4YtbprSY4p0RzB67nviEZk53v20DdkQZ5AzKN6lX6b24PcF7LrHuTlS82Q993B7VNuBdqbU8siuMmQNmHTOJV+m9uJ28La5m14WqB4MltAu9V4n3MaJqrKg8al32IdpX+29vRiRbzxhxjw3XpwpQsB6fasCPekbch0lX67yPFQ7WXGeSFYi3razhPUfSuVZADTEEqRnkLEr5A9r0ccocvFHNvzDG9taHpYZMeP+4NFbZXqAiMi4pusbL4dLC9lUPv5IViLfvbNVgIiPw4QCX4mJrsXVoBE/lijQrHdOvjhN9+C3T4QjF7oCGAe6wrKjOqRemu0XlEeODddZrwCxB7oyXZGn1QzEGyqavX4IAupSjd1VpWpXK2OmgAzdZXwIWM262lF1M9vMVC9ILOGX558hTahNnQWqLb3fT2oCZLShEzUCP+/EXFLa9dZM88Q3ULQBtMT7Rks6UKKZqG3PU1xa1+ywmpq1v2JDJtMCErZIrdzeTSHEW+hBa5tdW0QHr5CP2S4XRaOeNURq2UMgIopDgWe0PP5/P+wCLp+E9lg9WLvm9DdjzepVDUSyxl4DMspAjv3Vpk3qw7nR/+dXQ+KXWZAZBvw4YKacMRAoc1YqTWgNeZz9hDyhZ8JZ1MC6vcQcqWgkCH0MJ+pkyFwLQfkq/zYJt9IXwrMfsmPQAc3h1+TD0kgF2OA1c/S/hlqHTTarw5FX+BhXdQjRACnqhVi7zO7LRx9g0s8e4irw50sl8wQuhhjKsYAvl8IaPDCm8T5FKJL0Ck5pJRq32NDxhSPoADK4MuVUBro6WW4JstN6jj3IF/BPHDhAEUwkooJZvajE0Fvt2q1FJDDa5EYwiqQ3U5UJj4Q/DGh4/rgW2YlVCypQjUhi4BbgbY2FnDL8Dvv1t9ID5GqFUiuC2BOmSCh1e/3Gw2sQEU2MdfTh8+nl4QxIvY9kq8N+maKm+vQUT8spLPFCbotdCDMb9/YNIUbFlGpoIQPkJty7nKAqgRFuNrtJWcNEy/TPPDdzpdUwF1IXo7Da4eU4MHFINwdQRO95nCNMGBOpwaZrbF3GttS+irOTIECRXRDaXU2HswDsExx4VmywWHTUnmyYXBtpQBFbRaAy4uBLalqmDzwwa8m3IDjIaogFAlwlziivPHHx/DCd6I8/QXDUIeP/gYIgSNIOK/YOXH0We/H+2zwi2lVZkcthLYa+/b4ERPJWKCAexOhtcQ1xuTfUY2btVasP+ymC0JZEdXnkYAtYR5hGV3dPb9U4bwuUMbffII9yyc0EH4FJjXnL/+xTzuQ3Znmuh1JxPSEBnceEhwD5D4KqhqmEEbQy84v7l5f72YN7fp9tJ8/JA387FN1kkdYUCaqIcl00Bec4z+ejXvlvFS9dSK4YPrUqlzCHNBXn8+aP+V3SZnmfa+w+tCJPghAz7GwecU54C1MT/Ueb//xOl5jTYoyQw6l6eVBMiGiswJL6B6iLbiIrfG2slS9Tr9WsbvliuB5078qcbMCSp1LlUcrPyGXkBuZLxSD0erXTYUqhUceNFjaF/BByOQI3b/BeLkzXXftfGk2ynvnG28Wh344YBn7XKlEAVCENoxq4UieGc9d3dtrmTe8nz1NlsZhsfQ7cm9NRKwAgKvzSsAJTCyj7jmuORo57Gm6xqvXVfKMY+atPDblCNMDVQledOW/8mKi7Xme2tNjttFDaG/ii3rCsazqZD+w3jbplxrCaHvgG4qkB9d1VA2Xkyyut35QsZLZLQ32rSpBrdrQ3zsq3sTXqRAESLUeByFp3wjYGXVx5JKYbw2+PJoA/FIgip8A6oKwUztnEwjpxBejrxN66Np9E2hZNbHE8UxTUJpVRjDmtpPFU8nAZDqTJl6iUlF/YmTc4p5Inuntl4IrKaW7vOJ7AhTARNcudRunvHJxOBoLBEGGU1zP1TxPqVgGr/SYkrEztZRiqNKgMoZWcBtx/q8gqsOqmpXmx3WZ5fKoCRweB9l6ciRtisiZ+rjS+NLuVJcQbWLzD23NDZBEjzYNgF8eiUxs2Cz8LY1xRMsuNTN1v4lbkx8yiVue910ygk3oToy3e5JRhAbsEE/23icKaAJ+mZxdqhJTCQfarC0FGHWsWb4tsCeFBdM6jbPs9Vwux3ITjaNRz81ecBpYBRKrTGeb7KbkdYPIDvilkKJuRzT3bNDTnhdlFmfdLPglLal5gMv+rr+fTMlxiNP0WZtEA++qOXwcyzx+Iu3/9h/9p/9Z/+9/cf+s/9KdY1s9p/9Z//Zf2Wu9qXb23/sP/vPAjjUnO7+tUDb23/sP/vP/rP/3v5j/9l/9p/99/Yf+8/+s//sv7f/2H/2X2oVaCYo2/yIs9l/d67HI8ie/WcA5b/PHSY83QxQvn3vBK4hk97OyBPqgg/dqfIEmgnsv3vX1W//IpDtfyZ9Q5HMqxAzQRKjrilZGpqgv/G9CrlD+GKS5JBTwaWq/Ve9CDETVHDk59P4KbiUod+p/3ye3v2lnf0ooUtJuMpEoRo+D9x89PoU3Rn4icHWLTBxCiGcAVbAHdKkw1kWGIEGtP9KICXcAwmfu6ZZtIUpF2mKKeL8mLkVWybOBPlMt5oE68o+CX9cugQd8XjMud//yleHxFNznUY/dKg9Cccx8H4Izw1IakC8xOb+2wnUkdfT1C5w01nPwuHZHE/f0gQOE1pXQdqTcVxxNgFYbPL3dMjG09Vx5nWBZIY87khknM/+O3gWsHBh2pNzqOvAJqwKm7ROHNCFlxqkJQKN913WrXA5jDL7oUlw4M1iFCkpmtcFUhkpPv4fkAgg431n6QqXxNDJb/TrISxlUjSvC2QzUlsaySA0pe6wgIUL056cgy8mSQ49VQNJVGozGm9Do820/25k87rAfWfpCjeETdVkrib/wSFKLnhy5DOi+EIhmU9vPwM/DNUPbCEJy1r/Wca7A7Un4dCWiLhoKFTD54HC6ZQP6rCoWi+55Q7JgpaucLcfPHaFoU6jqEP9/RsoSevKg1MI4bKimXNKLsPrCx8JFp31lDvu7gyGrzev4Y0FW71DkhihVCwLjiBVUDJrTlko3U/bZ7zBrqD2jA86u3Fa9UYfyY09kjTG8XBfwD9cMdqze9AccF4JC0CaRQuHc+guPTysOW/L1sA9h3QhPQvKCTuh/3WkD0lhhPKAJLRidD4NeNrdIkhHXlNSXDU8b+91x5CHN0vAQ9BZ4CUNy/rPizwk/7mHD3n/9Hfk4YjCMXDOUSxml4O1kzT7zsFnDpCA1Fx+rlc6yy13v8bCJTHSASwLjvCUj8UQiU8EGonLW3LLeJ4dBr9yTIM1JYJl8dIv24kW55B0BjeCV/rSG7LDTsJpyYl5aYXbbV0HAQFESrdaXfynFGgYkkFbpL534g9RqEWUq7f5cJcc1EU45ebNKbunz3IfINm6wDiD0o5d9IF1s6SHiHUWughPl3fw8YJGCS8oSVJ/iNORF9S8OSWPuWZuN4uR903x7CDGw0HeuOkzQQ1HKZo4eJpUrkrG6x14C4iO4ON/Wv4idAGahcwVLMq7N/tCpDGsCpc2eGgGpXCRrrBXEqIjv3txLwQajXxaH/zZhcyDLSXxAIJjDZ8HbsoP0stg0rAe2N6+QBciSnuSDliDLyihlHHIYOmblKhu9lIv22kU4kIkL1ecLcoV3mLb8UALi/3Bgym0QO0c3sS5ImdDXUyiYS0MeJpjj33ttGb/bbiNOC3hCHQh0iFWdqHYejc457pjG7mL9lUSPpqleCzJJ4go7clnlDo32i9YD6ncRGlPKsPr/HzecwKUgcU66PpjG5sqUJE3KHjs9gO4DzC8KK2jBWlPQoMrjHOAADjZSdeV0vKvRj50jSK15xzSUK+khWhPOiP0B1hu/umnusH8jlzEkUc3S0BCsClhEc1uT15D69v1ArmjWCZBOnIKwxeSeJH5FAuPeJ5iEYVoT8kgSEdeVdpfQvL3sE92++zAhaQyjunYVm/svyhCtOek601pVUb+/vprP/5j/9l/9p/9Z//Zf/af/Wf/2X/2n/1n/9l/9p/9Z//Zf/af/Wf/2X/2n/1n/9l/9p/9Z//Zf/af/Wf/2X/2n/1n/9l/9l+Z6C8=")
size_override = Vector2(1280, 720)

[sub_resource type="CanvasTexture" id="CanvasTexture_ckj17"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rhauw"]
texture = SubResource("CanvasTexture_ckj17")
modulate_color = Color(1, 0, 0, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_x57mx"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xmuwd"]
texture = SubResource("CanvasTexture_x57mx")
modulate_color = Color(0.415686, 0, 0, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_ecmom"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mbb6n"]
texture = SubResource("CanvasTexture_ecmom")
modulate_color = Color(1, 0, 0, 1)

[node name="Start_up" type="CanvasLayer"]
script = ExtResource("1_xucof")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(1280, 720)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ckj17")

[node name="Start_Background" type="Sprite2D" parent="PanelContainer"]
texture_filter = 1
position = Vector2(641, 362)
texture = SubResource("PortableCompressedTexture2D_ckj17")
metadata/_aseprite_wizard_interface_config_ = {
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"embed_tex": true,
"i_mode": 1,
"keep_anim_length": false,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "",
"slice": "",
"source": "res://Google Dino Run 911 Vers/GoogleDInoRun_911Vers.Start_up_Background.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "00d56b85a2c8b0f78e1629fc3061b7dc"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_top = 50

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
layout_mode = 2

[node name="Setting" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("2_yn35v")
theme_override_font_sizes/font_size = 50
text = "Setting"

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 80
theme_override_constants/margin_bottom = 50

[node name="Exit" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_pressed_color = Color(0.470076, 0.470076, 0.470076, 1)
theme_override_fonts/font = ExtResource("2_yn35v")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxTexture_rhauw")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xmuwd")
theme_override_styles/normal = SubResource("StyleBoxTexture_mbb6n")
text = "Exit"

[node name="Touch_Start_Button" type="TouchScreenButton" parent="."]
position = Vector2(576, 285)
scale = Vector2(3.73156, 3.42725)
texture_normal = ExtResource("3_yn35v")

[node name="Setting" parent="." instance=ExtResource("4_ckj17")]
visible = false

[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/Setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/MarginContainer2/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Touch_Start_Button" to="." method="_on_touch_start_button_pressed"]
